--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -8,9 +8,6 @@ on:
     branches:
       - main
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   build:
 
@@ -20,19 +17,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+
     - name: configure
       run: cmake -Bbuild
       
     - name: build release
-      run: cmake --build build --config "$env:BUILD_TYPE" -j4
-
-    - name: build debug
-      run: cmake --build build --config Debug -j4
+      run: cmake --build build --config Release -j4
 
     - name: run tests release
       run: |
         cd build
-        ctest -C "$env:BUILD_TYPE" -VV
+        ctest -C Release -VV
+
+    - name: build debug
+      run: cmake --build build --config Debug -j4
 
     - name: run tests debug
       run: |
