--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -25,35 +25,33 @@ jobs:
 
     - name: configure debug
       shell: bash
-      run: cmake -B build/debug -DMKPOKER_ENABLE_CODE_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug
+      run: cmake -B build-debug -D MKPOKER_ENABLE_CODE_COVERAGE=1 -D CMAKE_BUILD_TYPE=Debug
 
     - name: build debug
       shell: bash
-      run: cmake --build build/debug -j4
+      run: cmake --build build-debug -j4
 
     - name: run tests debug
       shell: bash
       run: |
-        cd build/debug
+        cd build-debug
         ctest -VV
 
     - name: code coverage
       shell: bash
-      run: |
-        sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-10 10
-        bash <(curl -s https://codecov.io/bash)
+      run: bash <(curl -s https://codecov.io/bash) -x gcov-10
 
 
     - name: configure release
       shell: bash
-      run: cmake -B build/release -DCMAKE_BUILD_TYPE=Release
+      run: cmake -B build-release -D CMAKE_BUILD_TYPE=Release
       
     - name: build release
       shell: bash
-      run: cmake --build build/release -j4
+      run: cmake --build build-release -j4
 
     - name: run tests release
       shell: bash
       run: |
-        cd build/release
+        cd build-release
         ctest -VV
