--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,5 +42,6 @@ package_add_test(suit_test suit_test.cpp mkpoker::base)
 package_add_test(rank_test rank_test.cpp mkpoker::base)
 package_add_test(card_test card_test.cpp mkpoker::base)
 package_add_test(cardset_test cardset_test.cpp mkpoker::base)
+package_add_test(hand_test hand_test.cpp mkpoker::base)
 
 package_add_test(bitset_test bitset_test.cpp mkpoker::base)
