--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 out/
+CMakeSettings.json
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
