--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,20 @@ jobs:
             build_type: Release
             cc: clang-11
             cxx: clang++-11
+          - 
+            name: "ubuntu clang 11 libcxx Debug"
+            os: ubuntu-20.04
+            build_type: Debug
+            cc: clang-11
+            cxx: clang++-11
+            libcxx: true
+          - 
+            name: "ubuntu clang 11 libcxx Release"
+            os: ubuntu-20.04
+            build_type: Release
+            cc: clang-11
+            cxx: clang++-11
+            libcxx: true
 
           # clang 11 on macos
           - 
@@ -102,17 +116,20 @@ jobs:
           echo "CC=${{matrix.cfg.cc}}" >> $GITHUB_ENV
           echo "CXX=${{matrix.cfg.cxx}}" >> $GITHUB_ENV
           if [[  ${{matrix.cfg.os}} != 'windows-latest' ]]; then
-            if [[ ${{matrix.cfg.cxx}} == 'gcc-10' && ${{matrix.cfg.build_type}} == 'Debug' ]]; then
+
+            if [[ ${{matrix.cfg.cxx}} == 'g++-10' && ${{matrix.cfg.build_type}} == 'Debug' ]]; then
               cov=" -D MKPOKER_ENABLE_CODE_COVERAGE=1"
             fi
             echo "MKP_MONO=-D CMAKE_BUILD_TYPE=${{matrix.cfg.build_type}}$cov" >> $GITHUB_ENV
-            if [[  ${{matrix.cfg.os}} == 'ubuntu-20.04' && ${{matrix.cfg.cxx}} == 'clang++-11' ]]; then
+
+            if [[  ${{matrix.cfg.os}} == 'ubuntu-20.04' && ${{matrix.cfg.libcxx}} ]]; then
               echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS:STRING=-stdlib=libc++ -I $GITHUB_WORKSPACE/llvm/include/c++/v1\"" >> $GITHUB_ENV
               echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS:STRING=-L $GITHUB_WORKSPACE/llvm/lib -Wl,-rpath,$GITHUB_WORKSPACE/llvm/lib -lc++abi\"" >> $GITHUB_ENV
             elif [[  ${{matrix.cfg.os}} == 'macos-latest' ]]; then
               echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS:STRING=-stdlib=libc++ -nostdinc++ -I /usr/local/opt/llvm/include/c++/v1\"" >> $GITHUB_ENV
               echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS:STRING=-L /usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib -lc++abi\"" >> $GITHUB_ENV
             fi
+
           else
             echo "MKP_MULTI=--config ${{matrix.cfg.build_type}}" >> $GITHUB_ENV
           fi
@@ -127,6 +144,12 @@ jobs:
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 11
+      - 
+        name: "install libcxx 11"
+        if: startsWith(matrix.cfg.os, 'ubuntu') && matrix.cfg.libcxx
+        working-directory: "${{ env.HOME }}"
+        shell: bash
+        run: |
           chmod +x $GITHUB_WORKSPACE/script/build_libcxx.sh
           $GITHUB_WORKSPACE/script/build_libcxx.sh
 
@@ -165,7 +188,7 @@ jobs:
       # code coverage is only available with gcc debug
       - 
         name: code coverage
-        if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'gcc-10') && (matrix.cfg.build_type == 'Debug')
+        if: startsWith(matrix.cfg.os, 'ubuntu') && (matrix.cfg.cxx == 'g++-10') && (matrix.cfg.build_type == 'Debug')
         shell: bash
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
