--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,12 +66,14 @@ jobs:
             build_type: Debug
             cc: /usr/local/opt/llvm/bin/clang-11
             cxx: /usr/local/opt/llvm/bin/clang++
+            libcxx: true
           - 
             name: "macos clang 11 Release"
             os: macos-latest
             build_type: Release
             cc: /usr/local/opt/llvm/bin/clang-11
             cxx: /usr/local/opt/llvm/bin/clang++
+            libcxx: true
 
           # apple clang 12
           - 
@@ -80,12 +82,14 @@ jobs:
             build_type: Debug
             cc: clang
             cxx: clang++
+            libcxx: true
           - 
             name: "macos apple clang 12 Release"
             os: macos-latest
             build_type: Release
             cc: clang
             cxx: clang++
+            libcxx: true
 
           # msvc
           - 
@@ -122,12 +126,9 @@ jobs:
             fi
             echo "MKP_MONO=-D CMAKE_BUILD_TYPE=${{matrix.cfg.build_type}}$cov" >> $GITHUB_ENV
 
-            if [[ ${{matrix.cfg.os}} == 'ubuntu-20.04' && "x${{matrix.cfg.libcxx}}" == "xtrue" ]]; then
-              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS:STRING=-stdlib=libc++ -I $GITHUB_WORKSPACE/llvm/include/c++/v1\"" >> $GITHUB_ENV
-              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS:STRING=-L $GITHUB_WORKSPACE/llvm/lib -Wl,-rpath,$GITHUB_WORKSPACE/llvm/lib -lc++abi\"" >> $GITHUB_ENV
-            elif [[  ${{matrix.cfg.os}} == 'macos-latest' ]]; then
-              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS:STRING=-stdlib=libc++ -nostdinc++ -I /usr/local/opt/llvm/include/c++/v1\"" >> $GITHUB_ENV
-              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS:STRING=-L /usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib -lc++abi\"" >> $GITHUB_ENV
+            if [[ "x${{matrix.cfg.libcxx}}" == "xtrue" ]]; then
+              echo "CXX_ARGS=-D \"CMAKE_CXX_FLAGS:STRING=-stdlib=libc++ -I $GITHUB_WORKSPACE/local/include/c++/v1\"" >> $GITHUB_ENV
+              echo "LDD_ARGS=-D \"CMAKE_EXE_LINKER_FLAGS:STRING=-L $GITHUB_WORKSPACE/local/lib -Wl,-rpath,$GITHUB_WORKSPACE/local/lib -lc++abi\"" >> $GITHUB_ENV
             fi
 
           else
@@ -145,8 +146,8 @@ jobs:
           chmod +x llvm.sh
           sudo ./llvm.sh 11
       - 
-        name: "install libcxx 11"
-        if: startsWith(matrix.cfg.os, 'ubuntu') && matrix.cfg.libcxx
+        name: "install libcxx latest"
+        if: matrix.cfg.libcxx
         working-directory: "${{ env.HOME }}"
         shell: bash
         run: |
